# 2026_msFeat_TEA

./: .env.example  .gitignore  README.md  config.yaml  consulta_influxdb.py  pyproject.toml  requirements.txt  tests.csv
config/: README.md  config.example.yaml  config.yaml
data/raw/: EM_01912299X-118_6MWT_10.xlsx  EM_01912299X-118_6MWT_9.xlsx  EM_EMMHUG008-0_6MWT_49.xlsx  EM_EMMHUG008-0_6MWT_50.xlsx  EM_EMMHUG008-0_6MWT_52.xlsx  EM_PLMHUG001-29_6MWT_13.xlsx  EM_PLMHUG001-29_6MWT_17.xlsx  EM_PLMHUG001-29_6MWT_18.xlsx  EM_RHRHUG004-1_6MWT_28.xlsx  EM_RHRHUG004-1_6MWT_30.xlsx  EM_RHRHUG004-1_6MWT_31.xlsx  EM_SOMHUG003-31_6MWT_36.xlsx  EM_SOMHUG003-31_6MWT_37.xlsx  README.md
docs/: .buildinfo  api.html  architecture.html  cli.html  data_model.html  genindex.html  index.html  modules.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  workflow.html
docs/.doctrees/: api.doctree  architecture.doctree  cli.doctree  data_model.doctree  environment.pickle  index.doctree  modules.doctree  overview.doctree  workflow.doctree
docs/_modules/: index.html
docs/_sources/: api.rst.txt  architecture.rst.txt  data_model.rst.txt  index.rst.txt  modules.rst.txt
docs/_static/: alabaster.css  custom.css
docs/source/: cli.rst  conf.py
docsrc/: architecture.rst  cli.rst  conf.py  index.rst  modules.rst  overview.rst  workflow.rst
pkgs/: .config.yaml  .readthedocs.yaml  README.md  api.py  msgait.service  pyproject.toml  requirements.txt
pkgs/docs/: conf.py  find_gait.rst  find_mscodeids.rst  index.rst  modules.rst  msCodeID.rst  msGait.rst  msTools.rst  usage.rst
pkgs/locales/: msGait.pot
pkgs/msCodeID/: README.md  codeid_processor.py
reports/: edss_alignment_GUILLE.csv  gps_impact_analysis_estimated_2026-07-18.csv  pseudo_clinical_report_GUILLE_v2.md  pseudo_clinical_trial_summary_GUILLE_v2.csv  summary_metrics.csv
scripts/: README.md  analyze_new_hardware.py  batch_extractor.py  batch_process_all.py  diagnostico_db.py  process_gait_signals.py  run_batch.py
src/: README.md
tests/: test_extractor.py  test_postgresql.py  test_processor.py
(+68 files in other folders)
