[tool.poetry]
name = "gait-analysis-tfg"
version = "0.2.0"
description = "Pipeline profesional para el análisis biomecánico de señales de marcha"
authors = ["Teresa Estevan Autrán"]
readme = "README.md"
packages = [
    { include = "gait_analysis", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">=2.0.0"
numpy = ">=1.26.0"
matplotlib = ">=3.8.0"
scipy = ">=1.11.0"
pydantic = ">=2.5.0"
tables = ">=3.9.0"
pyyaml = "^6.0.3"

[tool.poetry.scripts]
analyze-gait = "scripts.process_gait_signals:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"