[tool.poetry]
name = "gait_analysis"
version = "0.2.0"
description = "Pipeline profesional para el análisis biomecánico de señales de marcha y fatiga motora"
authors = ["Teresa Estevan Autrán"]
readme = "README.md"
packages = [
    { include = "gait_analysis", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
scipy = "^1.11.0"
pydantic = "^2.5.0"
tables = "^3.9.0"
pyyaml = "^6.0.1"
influxdb-client = "^1.40.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
sphinx = "^8.0.0"

[tool.poetry.scripts]
extract-data = "gait_analysis.cli.extract_data:main"
analyze-gait = "gait_analysis.cli.analyze_gait:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
